--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Swavey Code</title>
+    <h1>Hello World</h1>
     <style>
         body {
             font-family: Arial, sans-serif;
